<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.notification.NotificationFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/notificationCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_notification_card"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvNoNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/no_notifications_yet"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNotificationDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/notification_desc"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="@+id/tvNoNotifications"
                app:layout_constraintEnd_toEndOf="@+id/tvNoNotifications"
                app:layout_constraintTop_toBottomOf="@+id/tvNoNotifications" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnExplore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_white_rounded"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="24dp"
                android:text="@string/explore_app"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/tvNotificationDesc"
                app:layout_constraintEnd_toEndOf="@+id/tvNotificationDesc"
                app:layout_constraintTop_toBottomOf="@+id/tvNotificationDesc" />

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/notification_empty_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>